# knowledge-as-dynamics

./: .gitignore  FINDINGS.md  LICENSE  README.md  pyproject.toml
paper/: main.tex
runs/: extval_gi.json  extval_mnist.json  gi.json  mnist_results.json  mnist_summary.json  newton.json  pendulum.json  ratchet.json  results.json  sweep.json  transition.json
src/m5_fielddistill/: ae.py  alpha.py  extval.py  gi.py  mnist.py  newton.py  pendulum.py  plot.py  ratchet.py  sweep.py  train.py  transition.py  validate.py  world.py
